--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,7 +1,7 @@
 @use "../../styles/colors";
 .wrapper {
     padding: 14px;
-    background-color: #191828;
+    background-color: colors.$background_paper;
 }
 
 .container {
@@ -11,7 +11,7 @@
 }
 
 .icon {
-    color: white !important;
+    color: colors.$text_primary!important;
 }
 
 .item {
