--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -1,9 +1,18 @@
+.avatar {
+    position: relative;
+}
+
 .image {
     width: 100%;
     height: 100%;
     border: 1px solid white;
+    border-radius: 50%;
 }
 
 .badge {
-    background-image: url('/images/verified');
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: -10px;
+    right: -10px;
 }
